:bug: (date) Fix date picker UI when editor is in dark mode
Closes #368

--- a/packages/js/src/assets/index.css
+++ b/packages/js/src/assets/index.css
@@ -227,3 +227,9 @@ textarea {
   color: var(--typebot-input-color);
   background-color: var(--typebot-input-bg-color);
 }
+
+.typebot-date-input {
+  color-scheme: light;
+  color: var(--typebot-input-color);
+  background-color: var(--typebot-input-bg-color);
+}
